external-crates/move/crates/move-compiler/tests/move_2024/parser/pattern_ellipsis_invalid.exp
error[E01002]: unexpected token
   ┌─ tests/move_2024/parser/pattern_ellipsis_invalid.move:10:13
   │
10 │             ..
   │             ^^ Invalid pattern

